@@ -23,6 +23,7 @@
             Added RegEx lexing (part of #256)
             Puck.js: fix error 8 from NRF.sleep during an active connection 
             nRF5x: Fix `NRF.updateServices` when a 128 bit service shares the same 16 bit UUID
+            Add 'errors' option when using `Serial.setup` to enable error handling (and turn it off by default as it can fill the input queue)
 
      1v92 : nRF5x: Fix issue where Espruino could crash during save() if the flash got into a strange state
             Added Pin.toggle() function
